src/styles/global.scss
@font-face {
  font-family: "STIXTwoText";
  src: url("/fonts/STIXTwoText-variable.woff2") format("woff2");
  font-weight: 400;
  font-style: normal;
  font-display: swap;
}
@font-face {
  font-family: "STIXTwoText";
  src: url("/fonts/STIXTwoText-italic-variable.woff2") format("woff2");
  font-weight: 400;
  font-style: italic;
  font-display: swap;
}

/* Variables and Pico overrides */
:root:root {
  --size-main: 960px;
  --size-wide: 1920px;
  --hue: 92.4; // Yellow

  --pico-font-family: "STIXTwoText", sans-serif;
  --pico-muted-border-color: #bcbec0;
}

:root.rgb {
  animation: funny-hue 10s linear infinite;
}

@property --hue {
  syntax: "<number>"; /* <- defined as type number for the transition to work */
  initial-value: 0;
  inherits: false;
}

@keyframes funny-hue {
  from {
    --hue: 92.4;
  }
  to {
    --hue: 360;
  }
}

/* Alternate shadow */
:root:root {
  /* https://www.joshwcomeau.com/shadow-palette/ */
  --shadow-color: 225deg 38% 0%;
  --shadow-outset: 0 0.2px 0.3px hsl(var(--shadow-color) / 0), 0 1px 2.5px hsl(var(--shadow-color) / 0.05),
    0 2px 4px -2px hsl(var(--shadow-color) / 0.11), 0 2.1px 10.2px hsl(var(--shadow-color) / 0.26);
  --shadow-inset: 0 0.2px 0.3px hsl(var(--shadow-color) / 0) inset, 0 1px 2.5px hsl(var(--shadow-color) / 0.05) inset,
    0 2px 4px -2px hsl(var(--shadow-color) / 0.11) inset, 0 2.1px 10.2px hsl(var(--shadow-color) / 0.26) inset;
  --pico-box-shadow: var(--shadow-outset);
}

:root:root[data-theme="dark"] {
  --pico-card-background-color: #1d232f;
  --pico-code-background-color: var(--pico-form-element-selected-background-color);
}

:root:root[data-theme="light"] {
  --pico-background-color: oklch(96.13% 0.018 var(--hue));
  --pico-card-background-color: oklch(96.99% 0.0113 var(--hue));
  --pico-code-background-color: oklch(98.51% 0.0076 var(--hue));
  --pico-code-border-color: oklch(88.61% 0.0478 var(--hue));
  --shadow-color: 0deg 0% 49%;
}

/* General layout stuff */
html {
  height: 100%;
  scrollbar-color: rgb(from var(--pico-color) r g b / 20%) transparent;
  scrollbar-width: thin;
  scroll-behavior: smooth;
}
body {
  min-height: 100%;
}

body {
  display: grid;
  grid-template-rows: auto 1fr auto;
  grid-template-columns: minmax(0, 1fr); /* Evil grid bug */
  line-height: 1.5;
}

main {
  max-width: var(--size-main);
}

body > header,
body > footer {
  max-width: var(--size-wide);
  width: 100%;
  margin-inline: auto;
}

html,
article {
  transition:
    background-color var(--pico-transition),
    box-shadow var(--pico-transition);
}

/* Fix scrollbars moving over the body if possible */
@media (min-width: 800px) {
  :root {
    scrollbar-gutter: stable both-edges;
  }
}

/* Screen reader shenans */
.sr-only {
  border: 0;
  padding: 0;
  margin: 0;
  position: absolute !important;
  height: 1px;
  width: 1px;
  overflow: hidden;
  /* IE6, IE7 - a 0 height clip, off to the bottom right of the visible 1px box */
  clip: rect(1px 1px 1px 1px);
  /* maybe deprecated but we need to support legacy browsers */
  clip: rect(1px, 1px, 1px, 1px);
  /* modern browsers, clip-path works inwards from each corner */
  clip-path: inset(50%);
  /* added line to stop words getting smushed together (as they go onto separate lines and some screen readers do not understand line feeds as a space */
  white-space: nowrap;
}

/* Actual global element styles */
h1,
h2,
h3,
h4,
h5,
h6 {
  scroll-margin-top: 4rem;
}

img {
  display: block;
  margin: 0 auto;
  max-height: 100%;
  object-fit: cover;
  border-radius: var(--pico-border-radius);
}

/* In case you actually need it to be inline */
img.inline {
  display: inline-block;
}

a[href^="#"] {
  scroll-margin-top: 50vh;
}

pre,
code,
kbd {
  transition: background-color var(--pico-transition);
  scrollbar-width: thin;
}

code,
kbd {
  display: inline;
  color: var(--pico-contrast);
  font-size: 0.875rem;
  border: 1px solid var(--pico-code-border-color);
  padding: 0 0.2em;
}

hr {
  transition: border-top-color var(--pico-transition);
}

article > header {
  transition: border-bottom-color var(--pico-transition);
}

ul,
ol {
  padding-inline-start: 1.6em;
}

:is(ul) :is(ul) {
  margin-bottom: 0;
}

:where(article, blockquote) > *:last-child {
  margin-bottom: 0;
}

summary {
  font-style: italic;
}

/* Utility classes */
.inset {
  box-shadow: var(--shadow-inset);
}

/* Rehype heading link */
a:has(.header-permalink) {
  padding-inline: 0.5ch;
  color: var(--pico-muted-color);
  opacity: 0.5;
  transition: opacity var(--pico-transition);

  &:hover {
    opacity: 1;
  }
}

/* Expressive Code blocks */
.expressive-code {
  margin-bottom: var(--pico-typography-spacing-vertical);
}

/* Giscus */
.giscus {
  padding-inline: 1rem;
}

